# SparseFlowLSTM

./: README.md
.ipynb_checkpoints/: playground-checkpoint.ipynb
3DCNN/: 3D_CNN.py  3D_CNN_HUJI.tflearn.index  checkpoint  conv3d_solver.prototxt  conv3d_train.prototxt  train.sh  train.txt
EgoSeg-Matlab/: AccuracyInfo.m  BinaryHierarchicalAccuracy.m  ConfigWrapper.m  ConfigWrapperIncrementalID.mat  DataPicker.m  DataPicker_FixedTrainingSet.m  DataPicker_RandomTrainingSet.m  DataRepository.m  ElanHelper.m  Example.m  ExperimentData.m  ExperimentManager.m  ExperimentReportGenerator.m  FPVUtils.m  Node-Box-Open.mat  Node-Driving-Passenger.mat  Node-Sitting-Standing.mat  Node-Static-Moving.mat  README.txt  TreeNode.m  (+14 more)
Vid2OpticalFlowCSV/: CMakeCache.txt  CMakeLists.txt  Makefile  Vid2OpticalFlowCSV_VS2013.sln  Vid2OpticalFlowCSV_VS2013.vcxproj  Vid2OpticalFlowCSV_VS2013.vcxproj.filters  cmake_install.cmake  config.xml  default-config.xml  sparse_flow  stdafx.h
Vid2OpticalFlowCSV/Example/: README.txt  dump.csv  example1.bat  example2.bat  example3.bat  hero3-und-params.txt  hero3_plus_und-params.txt
Vid2OpticalFlowCSV/lk/: ConfigReader.cpp  ImageStats.cpp  LK2CSV.h  LK2CSV.h.save  LKTracker.cpp  TiledMotion.cpp  TrajFinder.cpp
Vid2OpticalFlowCSV/util/: ImCrop.cpp  ImgUndistort.cpp  LensDistortionCorrector.cpp  LensDistortionCorrector.h  Util.cpp  Util.h
Vid2OpticalFlowCSV/util/VideoReaders/: AbstractVideoReader.cpp  DXVideoReader.cpp  OpenCVVideoReader.cpp  QTVideoReader.cpp
Vid2OpticalFlowCSV/util/paramio/: ParamIO.cpp  XML_Node.cpp  XmlParser.cpp  XmlStream.cpp
(+30 files in other folders)
